--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <p>He told me, "Remember that kid ____? He ______ at school."</p>
       <p>I was shocked and told my other two friends ______ & ______.</p>
       <p>When I told them, they grabbed me by the _____ and started to ask me more questions about it.</p>
-      <p>It was a ______ day for me.</p>
+      <p>Then I hung out with them at ________ for a little. </p>
+      <p>After That, I ended up _______ back to my house.</p>
+      <p>Once I got home, my parents told me we were flying to _______ the next morning.</p>
+      <p>I was ______ and went up to my room to _____.</p>
+      <p></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
