--- a/index.html
+++ b/index.html
@@ -8,19 +8,39 @@
   </head>
   <body class="bg-white text-black">
     <div class="container text-center mt-3">
-      <h1 class="">Story Creator!</h1>
-      <p>It was a ______ and ______ , June Day.</p>
-      <p>I woke up, then went downstairs to eat ______.</p>
-      <p>After that, I ________ in the living room with my family.</p>
-      <p>After that, I went to the park with my friend ____.</p>
-      <p>He told me, "Remember that kid ____? He ______ at school."</p>
-      <p>I was shocked and told my other two friends ______ & ______.</p>
-      <p>When I told them, they grabbed me by the _____ and started to ask me more questions about it.</p>
-      <p>Then I hung out with them at ________ for a little. </p>
-      <p>After That, I ended up _______ back to my house.</p>
-      <p>Once I got home, my parents told me we were flying to _______ the next morning.</p>
-      <p>I was ______ and went up to my room to _____.</p>
-      <p></p>
+      <h1>Story Creator!</h1>
+      <p>It was a <input type="text"/>, June Day. <br> 
+        <small>(adjectives)</small></p>
+
+      <p>I woke up, then went downstairs to eat <input type="text"/>. <br>
+        <small>(noun)</small></p>
+
+      <p>After that, I <input type="text"/> in the living room with my family. <br>
+        <small>(verb)</small></p>
+
+      <p>After that, I went to the park with my friend <input type="text"/>. <br>
+        <small>(proper noun)</small></p>
+
+      <p>He told me, "Remember that kid <input type="text"/> at school." <br>
+        <small>(proper noun, verb)</small></p>
+
+      <p>I was shocked and told my other two friends <input type="text"/>. <br>
+        <small>(proper noun, proper noun)</small></p>
+
+      <p>When I told them, they grabbed me by the <input type="text"/> and started to ask me more questions about it. <br>
+        <small>(noun)</small></p>
+
+      <p>Then I hung out with them at <input type="text"/> for a little. <br>
+        <small>(noun)</small></p>
+
+      <p>After that, I ended up <input type="text"/> back to my house. <br>
+        <small>(action verb)</small></p>
+
+      <p>Once I got home, my parents told me we were flying to <input type="text" class="form-control d-inline w-auto" style="display:inline-block; width: auto;"/> the next morning. <br>
+        <small>(noun)</small></p>
+
+      <p>I was <input type="text"/>. <br>
+        <small>(adjective, action verb)</small></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
