--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>After that, I went to the park with my friend <input type="text"/>. <br>
         <small>(proper noun)</small></p>
 
-      <p>He told me, "Remember that kid <input type="text"/> at school." <br>
+      <p>He told me, "Remember that kid <input type="text"/> from school." <br>
         <small>(proper noun, verb)</small></p>
 
       <p>I was shocked and told my other two friends <input type="text"/>. <br>
@@ -36,11 +36,20 @@
       <p>After that, I ended up <input type="text"/> back to my house. <br>
         <small>(action verb)</small></p>
 
-      <p>Once I got home, my parents told me we were flying to <input type="text" class="form-control d-inline w-auto" style="display:inline-block; width: auto;"/> the next morning. <br>
+      <p>Once I got home, my parents told me we were flying to <input type="text"/> the next morning. <br>
         <small>(noun)</small></p>
 
       <p>I was <input type="text"/>. <br>
         <small>(adjective, action verb)</small></p>
+
+        <p>I went to the bathroom to <input type="text"/> and after I went to my room. <br>
+          <small>(verb)</small></p>
+
+          <p>In my room, I was packing my <input type="text"/> which took two hours <br>
+            <small>(noun)</small></p>
+
+          <p>After packing, I was questioning whether to <input type="text"/> or <input type="text"/>. <br>
+            <small>(noun, noun)</small></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
